updated index.html and images
In this commit, the index.html was updated and the background image was added to the images folder

--- a/index.html
+++ b/index.html
@@ -1,11 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>Working With CSS - To Do List</title>  
+      <link rel="stylesheet" href="css/main.css">  
 </head>
 <body>
-    
+  <header>
+    <h1>Story Planning Checklist</h1>
+  </header>
+  <main>
+    <article id="characters">
+      <h2>Characters</h2>
+      <ul class="characters">
+        <li><input type="checkbox"><span>Bob Smith</span></li>
+        <li><input type="checkbox"><span>Anne Twinkleworth</span></li>
+        <li><input type="checkbox"><span>Ronaldo Bingbong</span></li>
+        <li><input type="checkbox"><span>Cat Meow</span></li>
+        <li><input type="checkbox"><span>Old Man #3</span></li>
+        <li><input type="checkbox"><span>Mr. Evil Man</span></li>
+        <li><input type="text"><button type="button">Add</button></li>
+      </ul>
+    </article>
+
+    <article id="world">
+      <h2>World Building</h2>
+      <ul class="world">
+        <li><input type="checkbox"><span>World Name</span></li>
+        <li><input type="checkbox"><span>Cities</span></li>
+        <li><input type="checkbox"><span>Main Villiage</span></li>
+        <li><input type="text"><button type="button">Add</button></li>
+      </ul>
+    </article>
+
+    <article id="magic">
+      <h2>Magic System</h2>
+      <ul class="magic">
+        <li><input type="checkbox"><span>Magic Basics</span></li>
+        <li><input type="checkbox"><span>Elemental powers</span></li>
+        <li><input type="checkbox"><span>Spirit Realm</span></li>
+        <li><input type="checkbox"><span>Spell Material</span></li>
+        <li><input type="checkbox"><span>Wands/staff/hands/stones</span></li>
+        <li><input type="checkbox"><span>Elves</span></li>
+        <li><input type="checkbox"><span>Goblins</span></li>
+        <li><input type="checkbox"><span>Unicorns</span></li>
+        <li><input type="checkbox"><span>Fairies</span></li>
+        <li><input type="text"><button type="button">Add</button></li>
+      </ul>
+    </article>
+
+    <article id="chapters">
+      <h2>Chapters</h2>
+      <ul class="chapters">
+        <li><input type="checkbox"><span>Chapter 1</span></li>
+        <li><input type="checkbox"><span>Chapter 2</span></li>
+        <li><input type="checkbox"><span>Chapter 3</span></li>
+        <li><input type="checkbox"><span>Chapter 4</span></li>
+        <li><input type="checkbox"><span>Chapter 5</span></li>
+        <li><input type="checkbox"><span>Chapter 6</span></li>
+        <li><input type="checkbox"><span>Final Chapter</span></li>
+        <li><input type="text"><button type="button">Add</button></li>
+      </ul>
+    </article>
+  </main>
+  <div>
+    <details>
+      <summary><h2>Spoilers</h2></summary>
+      <h3>They all DIE! </h3>
+      <p>I'm just kidding </p>
+      <h3>NO ONE DIES </h3>
+      <p>Kidding again, at least one person dies</p>
+    </details>
+  </div>
 </body>
 </html>
